--- a/sass/abstracts/_fonts.scss
+++ b/sass/abstracts/_fonts.scss
@@ -1,13 +1,13 @@
 @font-face {
     font-family: "OpenSans"; 
-    src: url("/css/fonts/OpenSans-Regular.ttf") format("truetype"); 
+    src: url("../css/fonts/OpenSans-Regular.ttf") format("truetype"); 
     font-style: normal; 
     font-weight: normal; 
     } 
 
 @font-face {
     font-family: "Banny";
-    src: url("/css/fonts/Banny-Round.otf") format("truetype");
+    src: url("../css/fonts/Banny-Round.otf") format("truetype");
     font-style: normal; 
     font-weight: normal;
 }
