--- a/sass/layout/_choco.scss
+++ b/sass/layout/_choco.scss
@@ -1,20 +1,21 @@
-.choco-container {
-    // position: relative;
-    overflow: hidden;
-    width: 300vw;
+// .choco-container {
+//     display: flex;
+//     position: relative;
+//     overflow: hidden;
+//     min-width: 0;
 
-    &__box {
-    overflow: hidden;
-    width: 100vw;
-    float: left;
-    }
-}
+//     &__box {
+//     overflow: hidden;
+//     min-width: 0;
+//     float: left;
+//     }
+// }
 
 .choco {
     position: relative;
     height: 62.9rem;
-    width: 100vw;
-    background-image: url("/img/specialty.png");
+    width: 100%;
+    background-image: url("../img/specialty.png");
     background-size: cover;
     background-position: center;
     margin-top: 4rem;
@@ -24,7 +25,7 @@
 
     &__img {
         position: relative;
-        background-image: url("/img/Rectangle.png");
+        background-image: url("../img/Rectangle.png");
         width: 53.7rem;
         height: 53.7rem;
         background-size: cover;
@@ -93,4 +94,31 @@
             margin-right: 17px;
         }
     }
+}
+
+.slider {
+    position: relative;
+}
+.slider .slick-arrow {
+    position: absolute;
+    top: 10%;
+    z-index: 10;
+    font-size: 0;
+    height: 90%;
+    opacity: 0;
+}
+.slider .slick-arrow.slick-prev {
+    left: 0;
+    width: 20%;
+}
+.slider .slick-arrow.slick-next {
+    right: 0;
+    width: 20%;
+}
+
+.slick-list {
+    overflow: hidden;
+}
+.slick-track {
+    display: flex;
 }
