--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 .header {
     width: 100%;
     height: 74.5rem;
-    background-image: url('/img/header-bg.png');
+    background-image: url('../img/header-bg.png');
     background-position: center;
     background-size: cover;
     position: relative;
@@ -125,7 +125,7 @@
     &__icon {
 
         &--fb {
-            background-image: url("/img/fb.svg");
+            background-image: url("../img/fb.svg");
             background-position: center;
             background-size: contain;
             background-repeat: no-repeat;
@@ -134,7 +134,7 @@
         }
 
         &--tw {
-            background-image: url("/img/tw.svg");
+            background-image: url("../img/tw.svg");
             background-position: center;
             background-size: contain;
             background-repeat: no-repeat;
@@ -143,7 +143,7 @@
         }
 
         &--inst {
-            background-image: url("/img/inst.svg");
+            background-image: url("../img/inst.svg");
             background-position: center;
             background-size: contain;
             background-repeat: no-repeat;
@@ -177,7 +177,7 @@
     }
 
     &__anchor {
-        background-image: url("/img/angle-down.svg");
+        background-image: url("../img/angle-down.svg");
             background-position: center;
             background-size: contain;
             background-repeat: no-repeat;
