--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,3 +3,11 @@ $color-black: #000000;
 $color-white: #FFFFFF;
 $color-yellow: #E8C300;
 $color-grey: #E5E5E5;
+
+.color-white {
+    color: #FFFFFF;
+}
+
+.color-black {
+    color: #000000;
+}
