--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,8 +7,11 @@
 @import "base/utilities";
 @import "components/buttons";
 @import "components/forms";
+@import "components/sliders";
 @import "layout/choco";
+@import "layout/footer";
 @import "layout/header";
+@import "layout/menu";
 @import "layout/section-forms";
 @import "pages/home";
 
