--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,8 +9,25 @@
 html {
     font-size: 62.5%;
     font-family: 'OpenSans';
+    scroll-behavior: smooth;
+
+    @include respond (tab-land) {
+        font-size: 56.25%;
+    }
+
+    @include respond (tab-port) {
+        font-size: 50%;
+    }
+
+    @include respond (big-desktop) {
+        font-size: 75%;
+    }
 }
 
 body {
     box-sizing: border-box;
+
+    @include respond (tab-port) {
+        padding: 0;
+    }
 }
