--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -25,7 +25,7 @@ body {
 }
 
 .line {
-    position: absolute;
+    position: relative;
     background-color: $color-yellow;
     width: 5.6rem;
     height: .4rem;
@@ -42,6 +42,9 @@ body {
     color: $color-white;
     text-transform: uppercase;
     font-size: 8.946rem;
+    @include respond (phone) {
+        font-size: 4rem;
+    }
 }
 
 .heading-secondary {
