--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -43,6 +43,10 @@
     margin-top: 3.5rem !important;
 }
 
+.u-margin-top-medium-2 {
+    margin-top: 4.7rem !important;
+}
+
 .u-margin-top-big {
     margin-top: 8rem !important;
 }
