--- a/sass/layout/_choco.scss
+++ b/sass/layout/_choco.scss
@@ -14,7 +14,7 @@
 .choco {
     position: relative;
     height: 62.9rem;
-    width: 100%;
+    width: 100vw;
     background-image: url("../img/specialty.png");
     background-size: cover;
     background-position: center;
@@ -75,50 +75,4 @@
         text-align: center;
     }
 
-}
-
-
-.circle-box {
-    position: absolute;
-    left: 48.5%;
-    bottom: 40px;
-    display: flex;
-
-    &__circle {
-        height: 9.32px;
-        width: 9.32px;
-        background-color: rgba(255, 255, 255, 0.5);
-        border-radius: 50%;
-
-        &:not(:last-child) {
-            margin-right: 17px;
-        }
-    }
-}
-
-.slider {
-    position: relative;
-}
-.slider .slick-arrow {
-    position: absolute;
-    top: 10%;
-    z-index: 10;
-    font-size: 0;
-    height: 90%;
-    opacity: 0;
-}
-.slider .slick-arrow.slick-prev {
-    left: 0;
-    width: 20%;
-}
-.slider .slick-arrow.slick-next {
-    right: 0;
-    width: 20%;
-}
-
-.slick-list {
-    overflow: hidden;
-}
-.slick-track {
-    display: flex;
 }
