--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -188,3 +188,195 @@
             @include absCenter;
     }
 }
+
+@include respond (phone) {
+    .header {
+        width: 100%;
+        height: 74.5rem;
+        background-image: url('../img/header-bg.png');
+        background-position: center;
+        background-size: cover;
+        position: relative;
+        
+    
+        &__menu {
+            display: flex;
+            padding: 0 1.455rem;
+            justify-content: space-between;
+        }
+    
+        &__left {
+            display: flex;
+
+        }
+    
+        &__item-box {
+           padding: 0;
+           margin: 0;
+        }
+    
+        &__item {
+            text-align: center;
+            font-weight: bold;
+            font-size: 1.18rem;
+            color: $color-white;
+            text-decoration: none;
+            flex-wrap: wrap;
+            line-height: 1.7rem;
+            letter-spacing: .11rem;
+            text-transform: uppercase;
+            transition: all .4s;
+    
+            &:hover {
+                color: $color-yellow;
+            }
+        }
+    
+        &__logo-box {
+            position: absolute;
+            left: 1rem;
+            top: 1rem;
+        }
+    
+        &__logo {
+            width: 4.978rem;
+            height: 4.978rem;
+        }
+    
+        &__right {
+            display: flex;
+        }
+    
+        &__timer-box {
+            position: absolute;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 24.0rem;
+            height: 6.4rem;
+            background: rgba(196, 196, 196, 0.3);
+            left: -3px;
+            top: 17.2rem;
+        }
+    
+        &__timer-text {
+            font-weight: bold;
+            font-size: 4.046rem;
+            color: #FFFEFE;
+            line-height: 0px;
+        }
+    
+        &__time {
+            font-weight: bold;
+            font-size: 4.046rem;
+            color: #FFFEFE;
+            line-height: 0px;
+        }
+    
+        &__work-time {
+            position: absolute;
+            top: 41rem;
+            left: -9rem;
+        }
+    
+        &__work {
+            text-align: center;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 1.1rem;
+            line-height: 1rem;
+            letter-spacing: .01rem;
+            text-align: center;
+            color: #FFFFFF;
+            transform: rotate(-90deg);
+        }
+    
+        &__networks-box {
+            position: absolute;
+            right: .5rem;
+            top: 32.5rem;
+        }
+    
+        &__circle {
+            border-radius: 50%;
+            border: 1px solid rgba(112, 112, 112, 0.5);
+            margin-bottom: 1.5rem;
+            width: 4.5rem;
+            height: 4.5rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+    
+            &--active {
+                @include absCenter;
+                top: 105%;
+            }
+        }
+    
+        &__icon {
+    
+            &--fb {
+                background-image: url("../img/fb.svg");
+                background-position: center;
+                background-size: contain;
+                background-repeat: no-repeat;
+                width: 22px;
+                height: 18px;
+            }
+    
+            &--tw {
+                background-image: url("../img/tw.svg");
+                background-position: center;
+                background-size: contain;
+                background-repeat: no-repeat;
+                width: 22px;
+                height: 18px;
+            }
+    
+            &--inst {
+                background-image: url("../img/inst.svg");
+                background-position: center;
+                background-size: contain;
+                background-repeat: no-repeat;
+                width: 22px;
+                height: 18px;
+            }
+        }
+        &__block {
+            width: 60%;
+            @include  absCenter; 
+            top: 57%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+    
+        &__btn-box {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    
+        &__anchor-box {
+            background-color: $color-white;
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+        }
+    
+        &__anchor {
+            background-image: url("../img/angle-down.svg");
+                background-position: center;
+                background-size: contain;
+                background-repeat: no-repeat;
+                width: 20px;
+                height: 20px;
+                z-index: 1000;
+                position: absolute;
+                @include absCenter;
+        }
+    }
+}
