--- a/sass/layout/_section-forms.scss
+++ b/sass/layout/_section-forms.scss
@@ -6,6 +6,8 @@
     flex-direction: row;
     margin-top: 2.3rem;
     margin-left: 12rem;
+    justify-content: center;
+    margin-right: 14rem;
 
     &__box-form {
         position: relative;
