--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -33,6 +33,9 @@ ORDER: Base + typography > general layout + grid > page layout > components
     @if $breakpoint == tab-land {
         @media only screen and (max-width: 75em) { @content };  //1200px
     }
+    @if $breakpoint == tab-desktop {
+        @media only screen and (max-width: 83em) { @content };  //1300px
+    }
     @if $breakpoint == big-desktop {
         @media only screen and (min-width: 132em) { @content }; //1800px
     }
