--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -36,6 +36,7 @@
         letter-spacing: .11rem;
         text-transform: uppercase;
         transition: all .4s;
+        display: block;
 
         &:hover {
             color: $color-yellow;
@@ -151,9 +152,10 @@
             height: 18px;
         }
     }
+
     &__block {
         width: 60%;
-        @include  absCenter; 
+        @include absCenter;
         top: 57%;
         display: flex;
         flex-direction: column;
@@ -178,14 +180,109 @@
 
     &__anchor {
         background-image: url("../img/angle-down.svg");
-            background-position: center;
-            background-size: contain;
-            background-repeat: no-repeat;
-            width: 20px;
-            height: 20px;
-            z-index: 1000;
-            position: absolute;
-            @include absCenter;
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        width: 20px;
+        height: 20px;
+        z-index: 1000;
+        position: absolute;
+        @include absCenter;
+    }
+}
+
+@include respond (tab-desktop) {
+    .header {
+        font-size: 50%;
+        &__menu {
+            padding-top: 1rem;
+            display: flex;
+            flex-wrap: nowrap;
+            justify-content: space-around;
+        }
+
+        &__item-box {
+            
+        }
+
+        &__logo-box {
+            position: relative;
+        }
+
+        &__logo {
+            width: 8.978rem;
+            height: 8.978rem;
+        }
+
+        &__timer-box {
+            left: -3px;
+            top: 17.2rem;
+        }
+    }
+}
+
+@include respond (tab-land) {
+    .header {
+        font-size: 50%;
+        &__menu {
+            padding-top: 1rem;
+            display: flex;
+            flex-wrap: nowrap;
+            justify-content: space-around;
+        }
+
+        &__item-box {
+            
+        }
+
+        &__logo-box {
+            position: relative;
+            // left: 1rem;
+            // top: 1rem;
+        }
+
+        &__logo {
+            width: 8.978rem;
+            height: 8.978rem;
+        }
+
+        &__timer-box {
+            left: -3px;
+            top: 17.2rem;
+        }
+    }
+}
+
+@include respond (tab-port) {
+    .header {
+
+        &__menu {
+            padding-top: 1rem;
+            display: flex;
+            flex-wrap: nowrap;
+            justify-content: space-around;
+        }
+
+        &__item-box {
+            width: 9.394rem;
+            height: 6.319rem;
+        }
+
+        &__logo-box {
+            position: relative;
+            // left: 1rem;
+            // top: 1rem;
+        }
+
+        &__logo {
+            width: 7.978rem;
+            height: 7.978rem;
+        }
+
+        &__timer-box {
+            left: -3px;
+            top: 17.2rem;
+        }
     }
 }
 
@@ -197,24 +294,23 @@
         background-position: center;
         background-size: cover;
         position: relative;
-        
-    
+
+
         &__menu {
             display: flex;
-            padding: 0 1.455rem;
-            justify-content: space-between;
+            flex-wrap: wrap;
+            justify-content: space-around;
         }
-    
+
         &__left {
             display: flex;
+        }
 
-        }
-    
         &__item-box {
-           padding: 0;
-           margin: 0;
+            padding: 0;
+            margin: 0;
         }
-    
+
         &__item {
             text-align: center;
             font-weight: bold;
@@ -226,27 +322,27 @@
             letter-spacing: .11rem;
             text-transform: uppercase;
             transition: all .4s;
-    
+
             &:hover {
                 color: $color-yellow;
             }
         }
-    
+
         &__logo-box {
             position: absolute;
             left: 1rem;
             top: 1rem;
         }
-    
+
         &__logo {
             width: 4.978rem;
             height: 4.978rem;
         }
-    
+
         &__right {
             display: flex;
         }
-    
+
         &__timer-box {
             position: absolute;
             display: flex;
@@ -258,27 +354,27 @@
             left: -3px;
             top: 17.2rem;
         }
-    
+
         &__timer-text {
             font-weight: bold;
             font-size: 4.046rem;
             color: #FFFEFE;
             line-height: 0px;
         }
-    
+
         &__time {
             font-weight: bold;
             font-size: 4.046rem;
             color: #FFFEFE;
             line-height: 0px;
         }
-    
+
         &__work-time {
             position: absolute;
             top: 41rem;
-            left: -9rem;
+            left: -10rem;
         }
-    
+
         &__work {
             text-align: center;
             font-style: normal;
@@ -290,93 +386,20 @@
             color: #FFFFFF;
             transform: rotate(-90deg);
         }
-    
+
         &__networks-box {
             position: absolute;
             right: .5rem;
-            top: 32.5rem;
+            top: 25.5rem;
         }
-    
+
         &__circle {
-            border-radius: 50%;
-            border: 1px solid rgba(112, 112, 112, 0.5);
             margin-bottom: 1.5rem;
             width: 4.5rem;
             height: 4.5rem;
             display: flex;
             align-items: center;
             justify-content: center;
-    
-            &--active {
-                @include absCenter;
-                top: 105%;
-            }
-        }
-    
-        &__icon {
-    
-            &--fb {
-                background-image: url("../img/fb.svg");
-                background-position: center;
-                background-size: contain;
-                background-repeat: no-repeat;
-                width: 22px;
-                height: 18px;
-            }
-    
-            &--tw {
-                background-image: url("../img/tw.svg");
-                background-position: center;
-                background-size: contain;
-                background-repeat: no-repeat;
-                width: 22px;
-                height: 18px;
-            }
-    
-            &--inst {
-                background-image: url("../img/inst.svg");
-                background-position: center;
-                background-size: contain;
-                background-repeat: no-repeat;
-                width: 22px;
-                height: 18px;
-            }
-        }
-        &__block {
-            width: 60%;
-            @include  absCenter; 
-            top: 57%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-        }
-    
-        &__btn-box {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-    
-        &__anchor-box {
-            background-color: $color-white;
-            width: 35px;
-            height: 35px;
-            border-radius: 50%;
-        }
-    
-        &__anchor {
-            background-image: url("../img/angle-down.svg");
-                background-position: center;
-                background-size: contain;
-                background-repeat: no-repeat;
-                width: 20px;
-                height: 20px;
-                z-index: 1000;
-                position: absolute;
-                @include absCenter;
         }
     }
 }
