--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,10 @@ body {
   background-color: rgba(112, 112, 112, 0);
   color: #FFFFFF;
   transition: all .4s; }
+  @media only screen and (max-width: 37.5em) {
+    .btn {
+      width: 13.7rem;
+      height: 4.6rem; } }
   .btn:not(:last-child) {
     margin-right: 3.5rem; }
   .btn__text {
@@ -561,143 +565,145 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); }
-
-@media only screen and (max-width: 83em) {
-  .header {
-    font-size: 50%; }
-    .header__menu {
+  @media only screen and (max-width: 83em) {
+    .header .header {
+      font-size: 50%; }
+      .header .header__menu {
+        padding-top: 1rem;
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: space-around; }
+      .header .header__logo-box {
+        position: relative; }
+      .header .header__logo {
+        width: 8.978rem;
+        height: 8.978rem; }
+      .header .header__timer-box {
+        left: -3px;
+        top: 17.2rem; } }
+  @media only screen and (max-width: 75em) {
+    .header .header {
+      font-size: 50%; }
+      .header .header__menu {
+        padding-top: 1rem;
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: space-around; }
+      .header .header__logo-box {
+        position: relative; }
+      .header .header__logo {
+        width: 8.978rem;
+        height: 8.978rem; }
+      .header .header__timer-box {
+        left: -3px;
+        top: 17.2rem; } }
+  @media only screen and (max-width: 56.25em) {
+    .header .header__menu {
       padding-top: 1rem;
       display: flex;
       flex-wrap: nowrap;
       justify-content: space-around; }
-    .header__logo-box {
+    .header .header__item-box {
+      width: 9.394rem;
+      height: 6.319rem; }
+    .header .header__logo-box {
       position: relative; }
-    .header__logo {
-      width: 8.978rem;
-      height: 8.978rem; }
-    .header__timer-box {
-      left: -3px;
-      top: 17.2rem; } }
-
-@media only screen and (max-width: 75em) {
-  .header {
-    font-size: 50%; }
-    .header__menu {
-      padding-top: 1rem;
-      display: flex;
-      flex-wrap: nowrap;
-      justify-content: space-around; }
-    .header__logo-box {
-      position: relative; }
-    .header__logo {
-      width: 8.978rem;
-      height: 8.978rem; }
-    .header__timer-box {
-      left: -3px;
-      top: 17.2rem; } }
-
-@media only screen and (max-width: 56.25em) {
-  .header__menu {
-    padding-top: 1rem;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-around; }
-  .header__item-box {
-    width: 9.394rem;
-    height: 6.319rem; }
-  .header__logo-box {
-    position: relative; }
-  .header__logo {
-    width: 7.978rem;
-    height: 7.978rem; }
-  .header__timer-box {
-    left: -3px;
-    top: 17.2rem; } }
-
-@media only screen and (max-width: 37.5em) {
-  .header {
-    width: 100%;
-    height: 74.5rem;
-    background-image: url("../img/header-bg.png");
-    background-position: center;
-    background-size: cover;
-    position: relative; }
-    .header__menu {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around; }
-    .header__left {
-      display: flex; }
-    .header__item-box {
-      padding: 0;
-      margin: 0; }
-    .header__item {
-      text-align: center;
-      font-weight: bold;
-      font-size: 1.18rem;
-      color: #FFFFFF;
-      text-decoration: none;
-      flex-wrap: wrap;
-      line-height: 1.7rem;
-      letter-spacing: .11rem;
-      text-transform: uppercase;
-      transition: all .4s; }
-      .header__item:hover {
-        color: #E8C300; }
-    .header__logo-box {
-      position: absolute;
-      left: 1rem;
-      top: 1rem; }
-    .header__logo {
-      width: 4.978rem;
-      height: 4.978rem; }
-    .header__right {
-      display: flex; }
-    .header__timer-box {
-      position: absolute;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 24.0rem;
-      height: 6.4rem;
-      background: rgba(196, 196, 196, 0.3);
+    .header .header__logo {
+      width: 7.978rem;
+      height: 7.978rem; }
+    .header .header__timer-box {
       left: -3px;
       top: 17.2rem; }
-    .header__timer-text {
-      font-weight: bold;
-      font-size: 4.046rem;
-      color: #FFFEFE;
-      line-height: 0px; }
-    .header__time {
-      font-weight: bold;
-      font-size: 4.046rem;
-      color: #FFFEFE;
-      line-height: 0px; }
-    .header__work-time {
+    .header .header__work-time {
       position: absolute;
       top: 41rem;
-      left: -11rem; }
-    .header__work {
-      text-align: center;
-      font-style: normal;
-      font-weight: bold;
-      font-size: 1.1rem;
-      line-height: 1rem;
-      letter-spacing: .01rem;
-      text-align: center;
-      color: #FFFFFF;
-      transform: rotate(-90deg); }
-    .header__networks-box {
-      position: absolute;
-      right: .5rem;
-      top: 25.5rem; }
-    .header__circle {
-      margin-bottom: 1.5rem;
-      width: 4.5rem;
-      height: 4.5rem;
-      display: flex;
-      align-items: center;
-      justify-content: center; } }
+      left: -7.5rem; }
+    .header .header__networks-box {
+      right: 3.5rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .header .header {
+      width: 100%;
+      height: 74.5rem;
+      background-image: url("../img/header-bg.png");
+      background-position: center;
+      background-size: cover;
+      position: relative; }
+      .header .header__menu {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around; }
+      .header .header__left {
+        display: flex; }
+      .header .header__item-box {
+        padding: 0;
+        margin: 0; }
+      .header .header__item {
+        text-align: center;
+        font-weight: bold;
+        font-size: 1.18rem;
+        color: #FFFFFF;
+        text-decoration: none;
+        flex-wrap: wrap;
+        line-height: 1.7rem;
+        letter-spacing: .11rem;
+        text-transform: uppercase;
+        transition: all .4s; }
+        .header .header__item:hover {
+          color: #E8C300; }
+      .header .header__logo-box {
+        position: absolute;
+        left: 1rem;
+        top: 1rem; }
+      .header .header__logo {
+        width: 4.978rem;
+        height: 4.978rem; }
+      .header .header__right {
+        display: flex; }
+      .header .header__timer-box {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 24.0rem;
+        height: 6.4rem;
+        background: rgba(196, 196, 196, 0.3);
+        left: -3px;
+        top: 17.2rem; }
+      .header .header__timer-text {
+        font-weight: bold;
+        font-size: 4.046rem;
+        color: #FFFEFE;
+        line-height: 0px; }
+      .header .header__time {
+        font-weight: bold;
+        font-size: 4.046rem;
+        color: #FFFEFE;
+        line-height: 0px; }
+      .header .header__work-time {
+        position: absolute;
+        top: 41rem;
+        left: -11rem; }
+      .header .header__work {
+        text-align: center;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 1.1rem;
+        line-height: 1rem;
+        letter-spacing: .01rem;
+        text-align: center;
+        color: #FFFFFF;
+        transform: rotate(-90deg); }
+      .header .header__networks-box {
+        position: absolute;
+        right: .5rem;
+        top: 25.5rem; }
+      .header .header__circle {
+        margin-bottom: 1.5rem;
+        width: 4.5rem;
+        height: 4.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: center; } }
 
 .menu {
   margin: 0rem 5rem 4.5rem 7.8rem; }
