--- a/css/style.css
+++ b/css/style.css
@@ -785,6 +785,11 @@ body {
   margin-left: 12rem;
   justify-content: center;
   margin-right: 14rem; }
+  @media only screen and (max-width: 37.5em) {
+    .section-forms {
+      display: block;
+      margin-right: 0;
+      margin-left: 0; } }
   .section-forms__box-form {
     position: relative;
     margin-top: 10rem;
@@ -817,6 +822,10 @@ body {
       border: none;
       border-radius: 4.66px;
       color: #FFFFFF; }
+      @media only screen and (max-width: 37.5em) {
+        .section-forms__btn--enother {
+          max-width: 25.7rem;
+          max-height: 5.59rem; } }
   .section-forms__btn-select {
     margin-bottom: .9rem;
     font-size: 1.3rem;
@@ -836,6 +845,9 @@ body {
   .section-forms__box-img {
     width: 53.7rem;
     height: 53.7rem; }
+    @media only screen and (max-width: 37.5em) {
+      .section-forms__box-img {
+        display: none; } }
   .section-forms__img {
     position: relative;
     background-image: url("../img/about-img.png");
@@ -863,6 +875,9 @@ body {
   padding: 0;
   width: 100%;
   text-align: center; }
+  @media only screen and (max-width: 37.5em) {
+    .text-box {
+      top: 2rem; } }
   .text-box__text {
     text-align: center;
     color: rgba(51, 51, 51, 0.5); }
