--- a/sass/layout/_section-forms.scss
+++ b/sass/layout/_section-forms.scss
@@ -9,6 +9,13 @@
     justify-content: center;
     margin-right: 14rem;
 
+    @include respond (phone) {
+        display: block;
+        margin-right: 0;
+        margin-left: 0;
+
+    }
+
     &__box-form {
         position: relative;
         margin-top: 10rem;
@@ -49,6 +56,11 @@
             border: none;
             border-radius: 4.66px;
             color: $color-white;
+
+            @include respond (phone) {
+                max-width: 25.7rem;
+                max-height: 5.59rem;
+            }
         }
     }
 
@@ -74,6 +86,10 @@
     &__box-img {
         width: 53.7rem;
         height: 53.7rem;
+
+        @include respond (phone) {
+            display: none;
+        }
     }
 
     &__img {
@@ -108,6 +124,10 @@
     padding: 0;
     width: 100%;
     text-align: center;
+
+    @include respond (phone) {
+        top: 2rem;
+    }
     
     &__text {
         text-align: center;
