--- a/sass/layout/_section-forms.scss
+++ b/sass/layout/_section-forms.scss
@@ -42,7 +42,7 @@
         padding: 2rem;
         margin-bottom: .9rem;
 
-        &:focus, 
+        &:focus,
         &::placeholder {
             color: rgba(51, 51, 51, 0.5);
         }
@@ -56,6 +56,9 @@
             border: none;
             border-radius: 4.66px;
             color: $color-white;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
 
             @include respond (phone) {
                 max-width: 25.7rem;
@@ -80,7 +83,7 @@
         background-repeat: no-repeat;
         overflow: hidden;
         background-position: 92%;
-        
+
     }
 
     &__box-img {
@@ -117,6 +120,7 @@
     }
 
 }
+
 .text-box {
     position: relative;
     top: -1rem;
@@ -128,10 +132,9 @@
     @include respond (phone) {
         top: 2rem;
     }
-    
+
     &__text {
         text-align: center;
         color: rgba(51, 51, 51, 0.5);
     }
 }
-
