--- a/sass/layout/_section-forms.scss
+++ b/sass/layout/_section-forms.scss
@@ -10,16 +10,21 @@
     margin-right: 14rem;
 
     @include respond (phone) {
-        display: block;
+        display: flex;
+        justify-content: center;
         margin-right: 0;
         margin-left: 0;
-
     }
 
     &__box-form {
         position: relative;
         margin-top: 10rem;
         margin-right: 1.6rem;
+
+        @include respond (phone) {
+            margin-right: 0;
+            margin-top: 5rem;
+        }
     }
 
     &__form {
@@ -29,6 +34,11 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-around;
+
+        @include respond (phone) {
+            flex-direction: column;
+            align-items: center;
+        }
     }
 
     &__btn {
