--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,9 @@ body {
   letter-spacing: .25rem; }
   .heading-secondary--white {
     color: #FFFFFF; }
+  @media only screen and (max-width: 37.5em) {
+    .heading-secondary {
+      font-size: 2rem; } }
 
 .u-center-text {
   text-align: center !important; }
@@ -238,7 +241,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  top: -55px; }
+  top: -5.5rem; }
+  @media only screen and (max-width: 37.5em) {
+    .slider .slick-dots {
+      top: -4rem; } }
 
 .slider .slick-dots li {
   list-style: none; }
@@ -267,8 +273,10 @@ body {
   background-position: center;
   margin-top: 4rem;
   overflow: hidden;
-  transition: all 2s;
   float: left; }
+  @media only screen and (max-width: 37.5em) {
+    .choco {
+      height: 71rem; } }
   .choco__img {
     position: relative;
     background-image: url("../img/Rectangle.png");
@@ -276,6 +284,31 @@ body {
     height: 53.7rem;
     background-size: cover;
     left: 14.3rem; }
+    @media only screen and (max-width: 83em) {
+      .choco__img {
+        width: 50rem;
+        height: 50rem; } }
+    @media only screen and (max-width: 75em) {
+      .choco__img {
+        width: 40rem;
+        height: 40rem;
+        left: 50%;
+        top: 50%;
+        transform: translate(-120%, 20%); } }
+    @media only screen and (max-width: 56.25em) {
+      .choco__img {
+        width: 40rem;
+        height: 40rem;
+        left: 50%;
+        top: 50%;
+        transform: translate(-105%, 20%); } }
+    @media only screen and (max-width: 37.5em) {
+      .choco__img {
+        width: 30rem;
+        height: 30rem;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, 0%); } }
   .choco__square {
     position: relative;
     width: 23.296rem;
@@ -289,11 +322,53 @@ body {
     transform: translate(50%, -50%);
     opacity: 0;
     transition: all .5s; }
+    @media only screen and (max-width: 83em) {
+      .choco__square {
+        transform: translate(45%, -50%); } }
+    @media only screen and (max-width: 75em) {
+      .choco__square {
+        width: 18rem;
+        height: 18rem;
+        transform: translate(50%, -50%); } }
+    @media only screen and (max-width: 56.25em) {
+      .choco__square {
+        width: 18rem;
+        height: 18rem;
+        transform: translate(50%, -50%); } }
+    @media only screen and (max-width: 37.5em) {
+      .choco__square {
+        width: 12rem;
+        height: 12rem;
+        border: 1rem solid #E8C300;
+        top: 50%;
+        right: 35%;
+        transform: translate(60%, -50%); } }
   .choco__header {
     position: absolute;
     top: 20rem;
     right: 7rem;
     max-width: 55.8rem; }
+    @media only screen and (max-width: 83em) {
+      .choco__header {
+        width: 50rem;
+        height: 50rem; } }
+    @media only screen and (max-width: 75em) {
+      .choco__header {
+        width: 50rem;
+        height: 50rem; } }
+    @media only screen and (max-width: 56.25em) {
+      .choco__header {
+        width: 40rem;
+        height: 40rem;
+        left: 50%;
+        top: 50%;
+        transform: translate(-10%, -40%); } }
+    @media only screen and (max-width: 37.5em) {
+      .choco__header {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, 0%);
+        width: 30rem; } }
   .choco__text-one {
     padding-top: 1.5rem;
     font-size: 1.677rem;
