--- a/sass/components/_sliders.scss
+++ b/sass/components/_sliders.scss
@@ -68,7 +68,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    top: -55px;
+    top: -5.5rem;
+
+    @include respond (phone) {
+        top: -4rem;
+    }
 }
 .slider .slick-dots li{
     list-style: none;
