--- a/sass/layout/_choco.scss
+++ b/sass/layout/_choco.scss
@@ -1,16 +1,3 @@
-// .choco-container {
-//     display: flex;
-//     position: relative;
-//     overflow: hidden;
-//     min-width: 0;
-
-//     &__box {
-//     overflow: hidden;
-//     min-width: 0;
-//     float: left;
-//     }
-// }
-
 .choco {
     position: relative;
     height: 62.9rem;
@@ -20,8 +7,16 @@
     background-position: center;
     margin-top: 4rem;
     overflow: hidden;
-    transition: all 2s;
+    // transition: all 2s;
     float: left;
+
+    @include respond (phone) {
+        height: 71rem;
+    }
+
+    &__box-form {
+        
+    }
 
     &__img {
         position: relative;
@@ -30,7 +25,38 @@
         height: 53.7rem;
         background-size: cover;
         left: 14.3rem;
+
+        @include respond (tab-desktop) {
+            width: 50rem;
+            height: 50rem;
+        }
+
+        @include respond (tab-land) {
+            width: 40rem;
+            height: 40rem;
+            left: 50%;
+            top: 50%;
+            transform: translate(-120%, 20%);
+        }
+
+        @include respond (tab-port) {
+            width: 40rem;
+            height: 40rem;
+            left: 50%;
+            top: 50%;
+            transform: translate(-105%, 20%);
+        }
+
+        @include respond (phone) {
+            width: 30rem;
+            height: 30rem;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, 0%);
+        }
+
     }
+
 
     &__square {
         position: relative;
@@ -45,6 +71,31 @@
         transform: translate(50%, -50%);
         opacity: 0;
         transition: all .5s;
+
+        @include respond (tab-desktop) {
+            transform: translate(45%, -50%);
+        }
+
+        @include respond (tab-land) {
+            width: 18rem;
+            height: 18rem;
+            transform: translate(50%, -50%);
+        }
+
+        @include respond (tab-port) {
+            width: 18rem;
+            height: 18rem;
+            transform: translate(50%, -50%);
+        }
+
+        @include respond (phone) {
+            width: 12rem;
+            height: 12rem;
+            border: 1rem solid $color-yellow;
+            top: 50%;
+            right: 35%;
+            transform: translate(60%, -50%);
+        }
     }
 
     &__header {
@@ -52,6 +103,32 @@
         top: 20rem;
         right: 7rem;
         max-width: 55.8rem;
+
+        @include respond (tab-desktop) {
+            width: 50rem;
+            height: 50rem;
+        }
+
+        @include respond (tab-land) {
+            width: 50rem;
+            height: 50rem;
+            
+        }
+
+        @include respond (tab-port) {
+            width: 40rem;
+            height: 40rem;
+            left: 50%;
+            top: 50%;
+            transform: translate(-10%, -40%);
+        }
+
+        @include respond (phone) {
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, 0%);
+            width: 30rem;
+        }
     }
 
     &__text-one {
@@ -74,5 +151,4 @@
         font-style: normal;
         text-align: center;
     }
-
 }
