--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@ body {
     height: 53.7rem;
     background-size: cover;
     left: 14.3rem; }
-    @media only screen and (max-width: 83em) {
+    @media only screen and (max-width: 80em) {
       .choco__img {
         width: 50rem;
         height: 50rem; } }
@@ -322,7 +322,7 @@ body {
     transform: translate(50%, -50%);
     opacity: 0;
     transition: all .5s; }
-    @media only screen and (max-width: 83em) {
+    @media only screen and (max-width: 80em) {
       .choco__square {
         transform: translate(45%, -50%); } }
     @media only screen and (max-width: 75em) {
@@ -348,7 +348,7 @@ body {
     top: 20rem;
     right: 7rem;
     max-width: 55.8rem; }
-    @media only screen and (max-width: 83em) {
+    @media only screen and (max-width: 80em) {
       .choco__header {
         width: 50rem;
         height: 50rem; } }
@@ -396,7 +396,6 @@ body {
   overflow: hidden; }
   .footer__box {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding: 0 19rem 0 19rem; }
@@ -415,8 +414,17 @@ body {
   .footer__img {
     width: 100%;
     height: 100%;
+    z-index: 1000;
     object-fit: cover;
     border-radius: 4.66px; }
+    @media only screen and (max-width: 80em) {
+      .footer__img {
+        width: 100%;
+        height: 100%; } }
+    @media only screen and (max-width: 75em) {
+      .footer__img {
+        width: 100%;
+        height: 100%; } }
   .footer__item-left {
     position: absolute;
     background-color: #000000;
@@ -643,7 +651,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); }
-  @media only screen and (max-width: 83em) {
+  @media only screen and (max-width: 80em) {
     .header .header {
       font-size: 50%; }
       .header .header__menu {
@@ -838,6 +846,12 @@ body {
     align-items: center;
     padding-top: 4.5rem;
     flex-wrap: wrap; }
+    @media only screen and (max-width: 80em) {
+      .menu__price {
+        justify-content: center; } }
+  @media only screen and (max-width: 80em) {
+    .menu__price-box {
+      margin-right: 2rem; } }
   .menu__item {
     margin-bottom: 3rem; }
   .menu__text-one {
@@ -847,6 +861,10 @@ body {
     line-height: 1.2rem;
     letter-spacing: .16rem;
     font-weight: bold; }
+    @media only screen and (max-width: 37.5em) {
+      .menu__text-one {
+        line-height: 2rem;
+        letter-spacing: .01rem; } }
   .menu__text-two {
     color: #999999;
     font-size: 1.18rem;
