--- a/css/style.css
+++ b/css/style.css
@@ -399,32 +399,30 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0 19rem 0 19rem; }
+    @media only screen and (max-width: 75em) {
+      .footer__box {
+        flex-wrap: nowrap;
+        justify-content: space-around;
+        padding: 0 1rem 0 1rem; } }
   .footer__box-img {
     display: flex;
     align-items: center;
     flex-direction: row;
     background-color: black;
     position: relative;
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
     max-width: 44rem;
     max-height: 44rem;
     margin-top: 4.5rem;
     margin-bottom: 4rem; }
+    .footer__box-img:not(:last-child) {
+      margin-right: 1rem; }
   .footer__img {
     width: 100%;
     height: 100%;
-    z-index: 1000;
     object-fit: cover;
     border-radius: 4.66px; }
-    @media only screen and (max-width: 80em) {
-      .footer__img {
-        width: 100%;
-        height: 100%; } }
-    @media only screen and (max-width: 75em) {
-      .footer__img {
-        width: 100%;
-        height: 100%; } }
   .footer__item-left {
     position: absolute;
     background-color: #000000;
@@ -444,6 +442,9 @@ body {
     font-family: "Banny";
     font-size: 2.236rem;
     text-transform: uppercase; }
+    @media only screen and (max-width: 37.5em) {
+      .footer__item-text {
+        font-size: 1.5rem; } }
     .footer__item-text--left {
       position: absolute;
       left: -1.5rem;
@@ -455,6 +456,9 @@ body {
       writing-mode: vertical-lr;
       left: 3rem;
       bottom: 2rem; }
+      @media only screen and (max-width: 37.5em) {
+        .footer__item-text--right {
+          left: 1.5rem; } }
   .footer__text {
     color: rgba(255, 255, 255, 0.5);
     font-family: 'OpenSans';
@@ -864,7 +868,8 @@ body {
     @media only screen and (max-width: 37.5em) {
       .menu__text-one {
         line-height: 2rem;
-        letter-spacing: .01rem; } }
+        letter-spacing: .01rem;
+        font-size: 1.4rem; } }
   .menu__text-two {
     color: #999999;
     font-size: 1.18rem;
