--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -8,10 +8,15 @@
 
     &__box {
         display: flex;
-        // flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
         padding: 0 19rem 0 19rem;
+
+        @include respond (tab-land) {
+            flex-wrap: nowrap;
+            justify-content: space-around;
+            padding: 0 1rem 0 1rem;
+        }
     }
 
     &__box-img {
@@ -20,30 +25,25 @@
         flex-direction: row;
         background-color: black;
         position: relative;
-        width: 100%;
-        height: 100%;
+        width: 80%;
+        height: 80%;
         max-width: 44rem;
         max-height: 44rem;
         margin-top: 4.5rem;
         margin-bottom: 4rem;
+
+        &:not(:last-child) {
+            margin-right: 1rem;
+        }
     }
 
     &__img {
         width: 100%;
         height: 100%;
-        z-index: 1000;
+        // z-index: 1000;
         object-fit: cover;
         border-radius: 4.66px;
 
-        @include respond (tab-desktop) {
-            width: 100%;
-            height: 100%;
-        }
-
-        @include respond (tab-land) {
-            width: 100%;
-            height: 100%;
-        }
     }
 
     &__item-left {
@@ -70,23 +70,17 @@
         font-size: 2.236rem;
         text-transform: uppercase;
 
-        // @include respond (tab-port) {
-        //     font-size: 1rem;
-        // }
-        
-        // @include respond (tab-port) {
-        //     font-size: 1.5rem;
-        // }
-
-        // @include respond (phone) {
-        //     font-size: .5rem;
-        // }
+        @include respond (phone) {
+            font-size: 1.5rem;
+        }
 
         &--left {
             position: absolute;
             left: -1.5rem;
             top: 6rem;
             transform: rotate(90deg);
+
+            @include respond (phone) {}
         }
 
         &--right {
@@ -95,6 +89,10 @@
             writing-mode: vertical-lr;
             left: 3rem;
             bottom: 2rem;
+
+            @include respond (phone) {
+                left: 1.5rem;
+            }
         }
     }
 
