--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -105,6 +105,7 @@
         @include respond (phone) {
             line-height: 2rem;
             letter-spacing: .01rem;
+            font-size: 1.4rem;
         }
     }
 
